// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress demo -- base 1`] = `
.emotion-15 {
  font-size: 12px;
}

.emotion-15 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-15 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-15 .uc-fe-form-label {
  color: #526075;
}

.emotion-13 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-13:before,
.emotion-13:after {
  content: ' ';
  display: table;
}

.emotion-13:after {
  clear: both;
}

.emotion-13 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-19 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-19:before,
.emotion-19:after {
  content: ' ';
  display: table;
}

.emotion-19:after {
  clear: both;
}

.emotion-17 {
  position: relative;
  left: 10%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-23 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-21 {
  width: 10%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-25 {
  float: right;
}

.emotion-15 {
  font-size: 12px;
}

.emotion-15 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-15 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-15 .uc-fe-form-label {
  color: #526075;
}

.emotion-13 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-13:before,
.emotion-13:after {
  content: ' ';
  display: table;
}

.emotion-13:after {
  clear: both;
}

.emotion-13 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-19 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-19:before,
.emotion-19:after {
  content: ' ';
  display: table;
}

.emotion-19:after {
  clear: both;
}

.emotion-17 {
  position: relative;
  left: 10%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-23 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-21 {
  width: 10%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-25 {
  float: right;
}

<div>
  <form
    class="uc-fe-form emotion-15 emotion-16"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-12 emotion-13 emotion-14"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        percent
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-9 emotion-10 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-7 emotion-8"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,6.27668537 L21.8268863,15.0324157 C22.0577046,15.253764 22.0577046,15.6126405 21.8268863,15.8339888 C21.7160434,15.940284 21.5657082,16 21.4089527,16 L2.5910473,16 C2.26462089,16 2,15.746236 2,15.4332022 C2,15.2828781 2.06227088,15.1387109 2.17311375,15.0324157 L11.3034441,6.27668537 C11.6881413,5.90777154 12.3118587,5.90777154 12.6965559,6.27668537 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,17.7233146 L21.8268863,8.96758429 C22.0577046,8.746236 22.0577046,8.38735951 21.8268863,8.16601122 C21.7160434,8.05971602 21.5657082,8 21.4089527,8 L2.5910473,8 C2.26462089,8 2,8.253764 2,8.56679776 C2,8.71712187 2.06227088,8.86128909 2.17311375,8.96758429 L11.3034441,17.7233146 C11.6881413,18.0922285 12.3118587,18.0922285 12.6965559,17.7233146 Z"
                />
              </svg>
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              max="100"
              min="0"
              step="1"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-19 emotion-20"
      >
        <span
          class="emotion-17 emotion-18"
        >
          10%
        </span>
      </span>
      <div
        class=" emotion-23 emotion-24"
      >
        <div
          class=" emotion-21 emotion-22"
        />
      </div>
      <span
        class="emotion-19 emotion-20"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-25 emotion-26"
        >
          100%
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress demo -- color 1`] = `
.emotion-2 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-2:before,
.emotion-2:after {
  content: ' ';
  display: table;
}

.emotion-2:after {
  clear: both;
}

.emotion-6 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-8 {
  float: right;
}

.emotion-0 {
  position: relative;
  left: 40%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-4 {
  width: 40%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-12 {
  position: relative;
  left: 100%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-16 {
  width: 100%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #15ad31;
}

.emotion-24 {
  position: relative;
  left: 20%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-28 {
  width: 20%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #ffc42e;
}

.emotion-36 {
  position: relative;
  left: 50%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-40 {
  width: 50%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #f44336;
}

.emotion-48 {
  position: relative;
  left: 67%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-52 {
  width: 67%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #411;
}

.emotion-2 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-2:before,
.emotion-2:after {
  content: ' ';
  display: table;
}

.emotion-2:after {
  clear: both;
}

.emotion-6 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-8 {
  float: right;
}

.emotion-0 {
  position: relative;
  left: 40%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-4 {
  width: 40%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-12 {
  position: relative;
  left: 100%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-16 {
  width: 100%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #15ad31;
}

.emotion-24 {
  position: relative;
  left: 20%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-28 {
  width: 20%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #ffc42e;
}

.emotion-36 {
  position: relative;
  left: 50%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-40 {
  width: 50%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #f44336;
}

.emotion-48 {
  position: relative;
  left: 67%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-52 {
  width: 67%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #411;
}

<div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-0 emotion-1"
        >
          40%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
      >
        <div
          class=" emotion-4 emotion-5"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-12 emotion-1"
        >
          100%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
      >
        <div
          class=" emotion-16 emotion-5"
          color="success"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-24 emotion-1"
        >
          20%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
      >
        <div
          class=" emotion-28 emotion-5"
          color="warn"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-36 emotion-1"
        >
          50%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
      >
        <div
          class=" emotion-40 emotion-5"
          color="error"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-48 emotion-1"
        >
          67%
        </span>
      </span>
      <div
        class=" emotion-6 emotion-7"
      >
        <div
          class=" emotion-52 emotion-5"
          color="#411"
        />
      </div>
      <span
        class="emotion-2 emotion-3"
      >
        <span>
          0%
        </span>
        <span
          class="emotion-8 emotion-9"
        >
          100%
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress demo -- custom 1`] = `
.emotion-2 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-0 {
  width: 40%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-2 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-0 {
  width: 40%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

<div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div
      style="width:100px"
    >
      <div
        class=" emotion-2 emotion-3"
      >
        <div
          class=" emotion-0 emotion-1"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div
      style="width:100px"
    >
      <div
        class=" emotion-2 emotion-3"
      >
        <div
          class=" emotion-0 emotion-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress demo -- format 1`] = `
.emotion-15 {
  font-size: 12px;
}

.emotion-15 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-15 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-15 .uc-fe-form-label {
  color: #526075;
}

.emotion-13 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-13:before,
.emotion-13:after {
  content: ' ';
  display: table;
}

.emotion-13:after {
  clear: both;
}

.emotion-13 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-19 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-19:before,
.emotion-19:after {
  content: ' ';
  display: table;
}

.emotion-19:after {
  clear: both;
}

.emotion-17 {
  position: relative;
  left: 10%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-23 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-21 {
  width: 10%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-25 {
  float: right;
}

.emotion-15 {
  font-size: 12px;
}

.emotion-15 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-15 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-15 .uc-fe-form-label {
  color: #526075;
}

.emotion-13 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-13:before,
.emotion-13:after {
  content: ' ';
  display: table;
}

.emotion-13:after {
  clear: both;
}

.emotion-13 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-10 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-7 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-7 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-7 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-7 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-7 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7:hover {
  border-color: #c3cad9;
}

.emotion-7 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-7 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-7 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-7 .uc-fe-numberinput-handler-up,
.emotion-7 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-7 .uc-fe-numberinput-handler-up:hover,
.emotion-7 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-7 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-7 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-19 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.emotion-19:before,
.emotion-19:after {
  content: ' ';
  display: table;
}

.emotion-19:after {
  clear: both;
}

.emotion-17 {
  position: relative;
  left: 10%;
  width: 50px;
  margin-left: -25px;
  display: inline-block;
  text-align: center;
}

.emotion-23 {
  height: 10px;
  background: #dfe0f1;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
}

.emotion-21 {
  width: 10%;
  height: 100%;
  border: none;
  border-radius: 5px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  background: #3860f4;
}

.emotion-25 {
  float: right;
}

<div>
  <form
    class="uc-fe-form emotion-15 emotion-16"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-12 emotion-13 emotion-14"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        percent
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-9 emotion-10 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-7 emotion-8"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,6.27668537 L21.8268863,15.0324157 C22.0577046,15.253764 22.0577046,15.6126405 21.8268863,15.8339888 C21.7160434,15.940284 21.5657082,16 21.4089527,16 L2.5910473,16 C2.26462089,16 2,15.746236 2,15.4332022 C2,15.2828781 2.06227088,15.1387109 2.17311375,15.0324157 L11.3034441,6.27668537 C11.6881413,5.90777154 12.3118587,5.90777154 12.6965559,6.27668537 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-3 emotion-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,17.7233146 L21.8268863,8.96758429 C22.0577046,8.746236 22.0577046,8.38735951 21.8268863,8.16601122 C21.7160434,8.05971602 21.5657082,8 21.4089527,8 L2.5910473,8 C2.26462089,8 2,8.253764 2,8.56679776 C2,8.71712187 2.06227088,8.86128909 2.17311375,8.96758429 L11.3034441,17.7233146 C11.6881413,18.0922285 12.3118587,18.0922285 12.6965559,17.7233146 Z"
                />
              </svg>
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              max="100"
              min="0"
              step="1"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <span
        class="emotion-19 emotion-20"
      >
        <span
          class="emotion-17 emotion-18"
        >
          10.00%
        </span>
      </span>
      <div
        class=" emotion-23 emotion-24"
      >
        <div
          class=" emotion-21 emotion-22"
        />
      </div>
      <span
        class="emotion-19 emotion-20"
      >
        <span>
          0.00%
        </span>
        <span
          class="emotion-25 emotion-26"
        >
          100.00%
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
    style="padding:24px"
  >
    <div>
      <div
        class=" emotion-23 emotion-24"
      >
        <div
          class=" emotion-21 emotion-22"
        />
      </div>
    </div>
  </div>
</div>
`;
